# autoshard-scaler

./: .dockerignore  .gitignore  Dockerfile  README.rst  config.sample.yml  logging.yml  pyproject.toml
.github/workflows/: push-docker-img.yml
autoshard_scaler/: main.py
k8s/: cronjob.yml  role.yml
tests/: test_autoshard_scaler.py
